5 Jul 2016:  Added README.md file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           height: 100%;
           overflow: auto;
      }
-     
+
      #map {
           position: absolute;
           height: 100%;
@@ -46,7 +46,7 @@
           <!-- populated by Angular -->
      </div>
      <div id="sidebar">
-          <h2 style="text-align: center;">Weather Across the USA</h2>
+          <h2 style="text-align: center; padding: 10%;">Weather Across the USA</h2>
           <table>
                <tr ng-repeat="weatherForOneCity in weatherInfo">
                     <td>{{weatherForOneCity.name}}</td>
